docs/envoy/v1.35.3/_sources/intro/arch_overview/security/external_dep_observability_ext.rst.txt
External dependencies: ``observability_ext``
============================================


envoy.access_loggers.fluentd
----------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `msgpack for C/C++ <https://github.com/msgpack/msgpack-c>`__, `6.1.0 <https://github.com/msgpack/msgpack-c/releases/tag/cpp-6.1.0>`__, 2023-07-08, `cpe:2.3:a:messagepack:messagepack:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Amessagepack%3Amessagepack%3A%2A&search_type=all>`__, `Boost <https://github.com/msgpack/msgpack-c/blob/cpp-6.1.0/LICENSE_1_0.txt>`__


envoy.tracers.datadog
---------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Datadog C++ Tracing Library <https://github.com/DataDog/dd-trace-cpp>`__, `0.2.2 <https://github.com/DataDog/dd-trace-cpp/releases/tag/v0.2.2>`__, 2024-06-21, , `Apache-2.0 <https://github.com/DataDog/dd-trace-cpp/blob/v0.2.2/LICENSE.md>`__


envoy.tracers.fluentd
---------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `msgpack for C/C++ <https://github.com/msgpack/msgpack-c>`__, `6.1.0 <https://github.com/msgpack/msgpack-c/releases/tag/cpp-6.1.0>`__, 2023-07-08, `cpe:2.3:a:messagepack:messagepack:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Amessagepack%3Amessagepack%3A%2A&search_type=all>`__, `Boost <https://github.com/msgpack/msgpack-c/blob/cpp-6.1.0/LICENSE_1_0.txt>`__


envoy.tracers.opentelemetry
---------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `OpenTelemetry <https://opentelemetry.io>`__, `1.21.0 <https://github.com/open-telemetry/opentelemetry-cpp/releases/tag/v1.21.0>`__, 2025-05-29, , `Apache-2.0 <https://github.com/open-telemetry/opentelemetry-cpp/blob/v1.21.0/LICENSE>`__


envoy.tracers.opentelemetry.samplers.always_on
----------------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `OpenTelemetry <https://opentelemetry.io>`__, `1.21.0 <https://github.com/open-telemetry/opentelemetry-cpp/releases/tag/v1.21.0>`__, 2025-05-29, , `Apache-2.0 <https://github.com/open-telemetry/opentelemetry-cpp/blob/v1.21.0/LICENSE>`__


envoy.tracers.opentelemetry.samplers.cel
----------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `OpenTelemetry <https://opentelemetry.io>`__, `1.21.0 <https://github.com/open-telemetry/opentelemetry-cpp/releases/tag/v1.21.0>`__, 2025-05-29, , `Apache-2.0 <https://github.com/open-telemetry/opentelemetry-cpp/blob/v1.21.0/LICENSE>`__


envoy.tracers.opentelemetry.samplers.dynatrace
----------------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `OpenTelemetry <https://opentelemetry.io>`__, `1.21.0 <https://github.com/open-telemetry/opentelemetry-cpp/releases/tag/v1.21.0>`__, 2025-05-29, , `Apache-2.0 <https://github.com/open-telemetry/opentelemetry-cpp/blob/v1.21.0/LICENSE>`__


envoy.tracers.opentelemetry.samplers.parent_based
-------------------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `OpenTelemetry <https://opentelemetry.io>`__, `1.21.0 <https://github.com/open-telemetry/opentelemetry-cpp/releases/tag/v1.21.0>`__, 2025-05-29, , `Apache-2.0 <https://github.com/open-telemetry/opentelemetry-cpp/blob/v1.21.0/LICENSE>`__


envoy.tracers.opentelemetry.samplers.trace_id_ratio_based
---------------------------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `OpenTelemetry <https://opentelemetry.io>`__, `1.21.0 <https://github.com/open-telemetry/opentelemetry-cpp/releases/tag/v1.21.0>`__, 2025-05-29, , `Apache-2.0 <https://github.com/open-telemetry/opentelemetry-cpp/blob/v1.21.0/LICENSE>`__


envoy.tracers.skywalking
------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `cpp2sky <https://github.com/SkyAPM/cpp2sky>`__, `0.6.0 <https://github.com/SkyAPM/cpp2sky/releases/tag/v0.6.0>`__, 2024-08-21, , `Apache-2.0 <https://github.com/SkyAPM/cpp2sky/blob/v0.6.0/LICENSE>`__
  `skywalking-data-collect-protocol <https://github.com/apache/skywalking-data-collect-protocol>`__, `10.2.0 <https://github.com/apache/skywalking-data-collect-protocol/releases/tag/v10.2.0>`__, 2025-03-24, `cpe:2.3:a:apache:skywalking:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aapache%3Askywalking%3A%2A&search_type=all>`__, Apache-2.0

