docs/envoy/v1.39.1/_sources/intro/arch_overview/security/external_dep_observability_ext.rst.txt
External dependencies: ``observability_ext``
============================================

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Java rules for Bazel <https://github.com/bazelbuild/rules_java/>`__, `9.6.1 <https://github.com/bazelbuild/rules_java/releases/tag/9.6.1>`__, 2026-02-24, , `Apache-2.0 <https://github.com/bazelbuild/rules_java/blob/9.6.1/LICENSE>`__
  `Shell script rules for Bazel <https://github.com/bazelbuild/rules_shell>`__, `0.7.1 <https://github.com/bazelbuild/rules_shell/releases/tag/v0.7.1>`__, 2026-03-23, , `Apache-2.0 <https://github.com/protocolbuffers/rules_shell/blob/0.7.1/LICENSE>`__


envoy.access_loggers.fluentd
----------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `msgpack for C/C++ <https://github.com/msgpack/msgpack-c>`__, `7.0.0 <https://github.com/msgpack/msgpack-c/releases/tag/cpp-7.0.0>`__, 2024-11-02, `cpe:2.3:a:messagepack:messagepack:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Amessagepack%3Amessagepack%3A%2A&search_type=all>`__, `Boost <https://github.com/msgpack/msgpack-c/blob/cpp-7.0.0/LICENSE_1_0.txt>`__


envoy.tracers.datadog
---------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Datadog C++ Tracing Library <https://github.com/DataDog/dd-trace-cpp>`__, `2.1.0 <https://github.com/DataDog/dd-trace-cpp/releases/tag/v2.1.0>`__, 2026-05-06, , `Apache-2.0 <https://github.com/DataDog/dd-trace-cpp/blob/v2.1.0/LICENSE.md>`__


envoy.tracers.fluentd
---------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `msgpack for C/C++ <https://github.com/msgpack/msgpack-c>`__, `7.0.0 <https://github.com/msgpack/msgpack-c/releases/tag/cpp-7.0.0>`__, 2024-11-02, `cpe:2.3:a:messagepack:messagepack:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Amessagepack%3Amessagepack%3A%2A&search_type=all>`__, `Boost <https://github.com/msgpack/msgpack-c/blob/cpp-7.0.0/LICENSE_1_0.txt>`__


envoy.tracers.opentelemetry
---------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `OpenTelemetry <https://opentelemetry.io>`__, `1.26.0 <https://github.com/open-telemetry/opentelemetry-cpp/releases/tag/v1.26.0>`__, 2026-03-20, , `Apache-2.0 <https://github.com/open-telemetry/opentelemetry-cpp/blob/v1.26.0/LICENSE>`__


envoy.tracers.opentelemetry.samplers.always_on
----------------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `OpenTelemetry <https://opentelemetry.io>`__, `1.26.0 <https://github.com/open-telemetry/opentelemetry-cpp/releases/tag/v1.26.0>`__, 2026-03-20, , `Apache-2.0 <https://github.com/open-telemetry/opentelemetry-cpp/blob/v1.26.0/LICENSE>`__


envoy.tracers.opentelemetry.samplers.cel
----------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `OpenTelemetry <https://opentelemetry.io>`__, `1.26.0 <https://github.com/open-telemetry/opentelemetry-cpp/releases/tag/v1.26.0>`__, 2026-03-20, , `Apache-2.0 <https://github.com/open-telemetry/opentelemetry-cpp/blob/v1.26.0/LICENSE>`__


envoy.tracers.opentelemetry.samplers.dynatrace
----------------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `OpenTelemetry <https://opentelemetry.io>`__, `1.26.0 <https://github.com/open-telemetry/opentelemetry-cpp/releases/tag/v1.26.0>`__, 2026-03-20, , `Apache-2.0 <https://github.com/open-telemetry/opentelemetry-cpp/blob/v1.26.0/LICENSE>`__


envoy.tracers.opentelemetry.samplers.parent_based
-------------------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `OpenTelemetry <https://opentelemetry.io>`__, `1.26.0 <https://github.com/open-telemetry/opentelemetry-cpp/releases/tag/v1.26.0>`__, 2026-03-20, , `Apache-2.0 <https://github.com/open-telemetry/opentelemetry-cpp/blob/v1.26.0/LICENSE>`__


envoy.tracers.opentelemetry.samplers.trace_id_ratio_based
---------------------------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `OpenTelemetry <https://opentelemetry.io>`__, `1.26.0 <https://github.com/open-telemetry/opentelemetry-cpp/releases/tag/v1.26.0>`__, 2026-03-20, , `Apache-2.0 <https://github.com/open-telemetry/opentelemetry-cpp/blob/v1.26.0/LICENSE>`__


envoy.tracers.skywalking
------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `cpp2sky <https://github.com/SkyAPM/cpp2sky>`__, `0.6.0 <https://github.com/SkyAPM/cpp2sky/releases/tag/v0.6.0>`__, 2024-08-21, , `Apache-2.0 <https://github.com/SkyAPM/cpp2sky/blob/v0.6.0/LICENSE>`__
  `skywalking-data-collect-protocol <https://github.com/apache/skywalking-data-collect-protocol>`__, `10.4.0 <https://github.com/apache/skywalking-data-collect-protocol/releases/tag/v10.4.0>`__, 2026-04-21, `cpe:2.3:a:apache:skywalking:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aapache%3Askywalking%3A%2A&search_type=all>`__, Apache-2.0


envoy.tracers.zipkin
--------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `OpenTelemetry <https://opentelemetry.io>`__, `1.26.0 <https://github.com/open-telemetry/opentelemetry-cpp/releases/tag/v1.26.0>`__, 2026-03-20, , `Apache-2.0 <https://github.com/open-telemetry/opentelemetry-cpp/blob/v1.26.0/LICENSE>`__

